@@ -13,6 +13,7 @@ pts-core: More verbose reporting of system/external dependency solving status
 pts-core: Get the modern result viewer working on Windows
 pts-core: Support for showing test logs from the result viewer
 pts-core: Support for showing install logs from the result viewer
+pts-core: PDF output improvements
 
 Phoronix Test Suite 9.4.0 Milestone 2
 5 February 2020
